src/main/java/islotwin/tkom/gen/GramParser.java
package islotwin.tkom.gen;// Generated from /Users/iga/Desktop/STUDIA/SEM6/TKOM/extra/Gram.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, WHILE=3, STARTCBRACKET=4, ENDCBRACKET=5, STARTNBRACKET=6, 
		ENDNBRACKET=7, STARTSBRACKET=8, ENDSBRACKET=9, ASSIGNOP=10, EXPRESSIONOP=11, 
		MATHOP=12, ANDOP=13, MODLISTOP=14, EXOP=15, COMMA=16, SEMICOLON=17, GETATTR=18, 
		SETATTR=19, DELETEATTR=20, SAVE=21, READ=22, PRINT=23, CREATE=24, SIZE=25, 
		FILTERBYATTR=26, FILTERBYTAG=27, NUMBERVAR=28, STRINGVAR=29, LISTVAR=30, 
		ELEMVAR=31, NUMBER=32, VARNAME=33, TEXT=34, WHITESPACE=35;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_ifStmt = 2, RULE_elseFun = 3, 
		RULE_whileStmt = 4, RULE_mathStmt = 5, RULE_saveDocStmt = 6, RULE_printStmt = 7, 
		RULE_initListStmt = 8, RULE_onVarStmt = 9, RULE_onVarFun = 10, RULE_initListFun = 11, 
		RULE_createFun = 12, RULE_readFun = 13, RULE_filterFun = 14, RULE_filterAttrFun = 15, 
		RULE_filterTagFun = 16, RULE_modListFun = 17, RULE_sizeFun = 18, RULE_initElemStmt = 19, 
		RULE_initElemFun = 20, RULE_createElemFun = 21, RULE_getElemFun = 22, 
		RULE_modAttrFun = 23, RULE_setAttrFun = 24, RULE_deleteAttrFun = 25, RULE_getAttrFun = 26, 
		RULE_initValStmt = 27, RULE_expression = 28, RULE_textArgument = 29, RULE_numberArgument = 30, 
		RULE_argument = 31;
	public static final String[] ruleNames = {
		"program", "statement", "ifStmt", "elseFun", "whileStmt", "mathStmt", 
		"saveDocStmt", "printStmt", "initListStmt", "onVarStmt", "onVarFun", "initListFun", 
		"createFun", "readFun", "filterFun", "filterAttrFun", "filterTagFun", 
		"modListFun", "sizeFun", "initElemStmt", "initElemFun", "createElemFun", 
		"getElemFun", "modAttrFun", "setAttrFun", "deleteAttrFun", "getAttrFun", 
		"initValStmt", "expression", "textArgument", "numberArgument", "argument"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'else'", "'while'", "'{'", "'}'", "'('", "')'", "'['", 
		"']'", "'='", null, null, null, null, "'.'", "','", "';'", "'getAttr'", 
		"'setAttr'", "'deleteAttr'", "'save'", "'read'", "'print'", "'create'", 
		"'size'", "'filterByAttr'", "'filterByTag'", "'num'", "'string'", "'list'", 
		"'elem'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "IF", "ELSE", "WHILE", "STARTCBRACKET", "ENDCBRACKET", "STARTNBRACKET", 
		"ENDNBRACKET", "STARTSBRACKET", "ENDSBRACKET", "ASSIGNOP", "EXPRESSIONOP", 
		"MATHOP", "ANDOP", "MODLISTOP", "EXOP", "COMMA", "SEMICOLON", "GETATTR", 
		"SETATTR", "DELETEATTR", "SAVE", "READ", "PRINT", "CREATE", "SIZE", "FILTERBYATTR", 
		"FILTERBYTAG", "NUMBERVAR", "STRINGVAR", "LISTVAR", "ELEMVAR", "NUMBER", 
		"VARNAME", "TEXT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gram.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				statement();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SAVE) | (1L << PRINT) | (1L << NUMBERVAR) | (1L << STRINGVAR) | (1L << LISTVAR) | (1L << ELEMVAR) | (1L << VARNAME))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public InitListStmtContext initListStmt() {
			return getRuleContext(InitListStmtContext.class,0);
		}
		public InitElemStmtContext initElemStmt() {
			return getRuleContext(InitElemStmtContext.class,0);
		}
		public InitValStmtContext initValStmt() {
			return getRuleContext(InitValStmtContext.class,0);
		}
		public MathStmtContext mathStmt() {
			return getRuleContext(MathStmtContext.class,0);
		}
		public OnVarStmtContext onVarStmt() {
			return getRuleContext(OnVarStmtContext.class,0);
		}
		public PrintStmtContext printStmt() {
			return getRuleContext(PrintStmtContext.class,0);
		}
		public SaveDocStmtContext saveDocStmt() {
			return getRuleContext(SaveDocStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				ifStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				initListStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				initElemStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(72);
				initValStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				mathStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(74);
				onVarStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(75);
				printStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(76);
				saveDocStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(77);
				whileStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(GramParser.IF, 0); }
		public TerminalNode STARTNBRACKET() { return getToken(GramParser.STARTNBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ENDNBRACKET() { return getToken(GramParser.ENDNBRACKET, 0); }
		public TerminalNode STARTCBRACKET() { return getToken(GramParser.STARTCBRACKET, 0); }
		public TerminalNode ENDCBRACKET() { return getToken(GramParser.ENDCBRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ElseFunContext elseFun() {
			return getRuleContext(ElseFunContext.class,0);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ifStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(IF);
			setState(81);
			match(STARTNBRACKET);
			setState(82);
			expression();
			setState(83);
			match(ENDNBRACKET);
			setState(84);
			match(STARTCBRACKET);
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85);
				statement();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SAVE) | (1L << PRINT) | (1L << NUMBERVAR) | (1L << STRINGVAR) | (1L << LISTVAR) | (1L << ELEMVAR) | (1L << VARNAME))) != 0) );
			setState(90);
			match(ENDCBRACKET);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(91);
				elseFun();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseFunContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(GramParser.ELSE, 0); }
		public TerminalNode STARTCBRACKET() { return getToken(GramParser.STARTCBRACKET, 0); }
		public TerminalNode ENDCBRACKET() { return getToken(GramParser.ENDCBRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ElseFunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseFun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterElseFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitElseFun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitElseFun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseFunContext elseFun() throws RecognitionException {
		ElseFunContext _localctx = new ElseFunContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_elseFun);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(ELSE);
			setState(95);
			match(STARTCBRACKET);
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(96);
				statement();
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SAVE) | (1L << PRINT) | (1L << NUMBERVAR) | (1L << STRINGVAR) | (1L << LISTVAR) | (1L << ELEMVAR) | (1L << VARNAME))) != 0) );
			setState(101);
			match(ENDCBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStmtContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(GramParser.WHILE, 0); }
		public TerminalNode STARTNBRACKET() { return getToken(GramParser.STARTNBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ENDNBRACKET() { return getToken(GramParser.ENDNBRACKET, 0); }
		public TerminalNode STARTCBRACKET() { return getToken(GramParser.STARTCBRACKET, 0); }
		public TerminalNode ENDCBRACKET() { return getToken(GramParser.ENDCBRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public WhileStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterWhileStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitWhileStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStmtContext whileStmt() throws RecognitionException {
		WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whileStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(WHILE);
			setState(104);
			match(STARTNBRACKET);
			setState(105);
			expression();
			setState(106);
			match(ENDNBRACKET);
			setState(107);
			match(STARTCBRACKET);
			setState(109); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(108);
				statement();
				}
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SAVE) | (1L << PRINT) | (1L << NUMBERVAR) | (1L << STRINGVAR) | (1L << LISTVAR) | (1L << ELEMVAR) | (1L << VARNAME))) != 0) );
			setState(113);
			match(ENDCBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathStmtContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(GramParser.VARNAME, 0); }
		public TerminalNode ASSIGNOP() { return getToken(GramParser.ASSIGNOP, 0); }
		public TerminalNode SEMICOLON() { return getToken(GramParser.SEMICOLON, 0); }
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public List<NumberArgumentContext> numberArgument() {
			return getRuleContexts(NumberArgumentContext.class);
		}
		public NumberArgumentContext numberArgument(int i) {
			return getRuleContext(NumberArgumentContext.class,i);
		}
		public TerminalNode MATHOP() { return getToken(GramParser.MATHOP, 0); }
		public MathStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterMathStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitMathStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitMathStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathStmtContext mathStmt() throws RecognitionException {
		MathStmtContext _localctx = new MathStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mathStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(VARNAME);
			setState(116);
			match(ASSIGNOP);
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				{
				setState(117);
				numberArgument();
				setState(118);
				match(MATHOP);
				setState(119);
				numberArgument();
				}
				}
				break;
			case 2:
				{
				setState(121);
				argument();
				}
				break;
			}
			setState(124);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SaveDocStmtContext extends ParserRuleContext {
		public TerminalNode SAVE() { return getToken(GramParser.SAVE, 0); }
		public TerminalNode STARTNBRACKET() { return getToken(GramParser.STARTNBRACKET, 0); }
		public TerminalNode VARNAME() { return getToken(GramParser.VARNAME, 0); }
		public TerminalNode COMMA() { return getToken(GramParser.COMMA, 0); }
		public TextArgumentContext textArgument() {
			return getRuleContext(TextArgumentContext.class,0);
		}
		public TerminalNode ENDNBRACKET() { return getToken(GramParser.ENDNBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(GramParser.SEMICOLON, 0); }
		public SaveDocStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_saveDocStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterSaveDocStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitSaveDocStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitSaveDocStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SaveDocStmtContext saveDocStmt() throws RecognitionException {
		SaveDocStmtContext _localctx = new SaveDocStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_saveDocStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(SAVE);
			setState(127);
			match(STARTNBRACKET);
			setState(128);
			match(VARNAME);
			setState(129);
			match(COMMA);
			setState(130);
			textArgument();
			setState(131);
			match(ENDNBRACKET);
			setState(132);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStmtContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(GramParser.PRINT, 0); }
		public TerminalNode STARTNBRACKET() { return getToken(GramParser.STARTNBRACKET, 0); }
		public TextArgumentContext textArgument() {
			return getRuleContext(TextArgumentContext.class,0);
		}
		public TerminalNode ENDNBRACKET() { return getToken(GramParser.ENDNBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(GramParser.SEMICOLON, 0); }
		public PrintStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterPrintStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitPrintStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitPrintStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStmtContext printStmt() throws RecognitionException {
		PrintStmtContext _localctx = new PrintStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_printStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(PRINT);
			setState(135);
			match(STARTNBRACKET);
			setState(136);
			textArgument();
			setState(137);
			match(ENDNBRACKET);
			setState(138);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitListStmtContext extends ParserRuleContext {
		public TerminalNode LISTVAR() { return getToken(GramParser.LISTVAR, 0); }
		public List<TerminalNode> VARNAME() { return getTokens(GramParser.VARNAME); }
		public TerminalNode VARNAME(int i) {
			return getToken(GramParser.VARNAME, i);
		}
		public TerminalNode ASSIGNOP() { return getToken(GramParser.ASSIGNOP, 0); }
		public TerminalNode SEMICOLON() { return getToken(GramParser.SEMICOLON, 0); }
		public InitListFunContext initListFun() {
			return getRuleContext(InitListFunContext.class,0);
		}
		public List<ModListFunContext> modListFun() {
			return getRuleContexts(ModListFunContext.class);
		}
		public ModListFunContext modListFun(int i) {
			return getRuleContext(ModListFunContext.class,i);
		}
		public List<FilterFunContext> filterFun() {
			return getRuleContexts(FilterFunContext.class);
		}
		public FilterFunContext filterFun(int i) {
			return getRuleContext(FilterFunContext.class,i);
		}
		public InitListStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initListStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).enterInitListStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramListener ) ((GramListener)listener).exitInitListStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramVisitor ) return ((GramVisitor<? extends T>)visitor).visitInitListStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitListStmtContext initListStmt() throws RecognitionException {
		InitListStmtContext _localctx = new InitListStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_initListStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(LISTVAR);
			setState(141);
			match(VARNAME);
			setState(142);
			match(ASSIGNOP);
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case READ:
			case CREATE:
				{
				setState(143);
				initListFun();
				}
				break;
			case VARNAME:
				{
				setState(144);
				match(VARNAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(148); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(147);
					modListFun();
					}
					}
					setState(150); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==EXOP );
				}
				break;
			case 2:
				{
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(152);
					filterFun();
					}
					}
					setState(155); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==EXOP );
				}
				break;
			}
			setState(159);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
